--- a/daily_pattern_decomosition.ipynb
+++ b/daily_pattern_decomosition.ipynb
@@ -34,8 +34,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-04T06:28:38.704367Z",
-     "start_time": "2025-05-04T06:28:38.662085Z"
+     "end_time": "2025-05-23T06:37:10.368967Z",
+     "start_time": "2025-05-23T06:37:09.459230Z"
     }
    },
    "cell_type": "code",
@@ -49,7 +49,7 @@
    ],
    "id": "19962da7d02099b",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -63,8 +63,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-04T06:29:12.346139Z",
-     "start_time": "2025-05-04T06:28:58.860476Z"
+     "end_time": "2025-05-23T06:37:15.937782Z",
+     "start_time": "2025-05-23T06:37:10.383976Z"
     }
    },
    "source": [
@@ -79,7 +79,9 @@
       "\n",
       "Processing P1a (Gallons/h)...\n",
       "  Detected 5 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
+      "Warning: Constrained optimization (force through all peaks) using SLSQP failed. \n",
+      " Trying unconstrained....\n",
+      "  using L-BFGS-B: for patternP1a (Gallons/h) where initial params were: [np.float64(8.1), np.float64(3.700000000000001), np.float64(3.5999999999999996), np.float64(15.1), np.float64(6.0), np.float64(7.200000000000001), 3.0, 3.0, 3.0, 3.0, 3.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
       "Max error at peaks: 0.6760\n",
       "Warning: Model does not pass exactly through all peaks!\n",
       "  Fitted P1a (Gallons/h) with 5 peaks\n",
@@ -89,7 +91,9 @@
       "\n",
       "Processing P1b (Gallons/h)...\n",
       "  Detected 3 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
+      "Warning: Constrained optimization (force through all peaks) using SLSQP failed. \n",
+      " Trying unconstrained....\n",
+      "  using L-BFGS-B: for patternP1b (Gallons/h) where initial params were: [np.float64(6.2), np.float64(2.8), np.float64(8.600000000000001), np.float64(4.1000000000000005), 3.0, 3.0, 3.0, 1.0, 1.0, 1.0]\n",
       "Max error at peaks: 0.6795\n",
       "Warning: Model does not pass exactly through all peaks!\n",
       "  Fitted P1b (Gallons/h) with 3 peaks\n",
@@ -99,7 +103,9 @@
       "\n",
       "Processing P2a (m³/h)...\n",
       "  Detected 5 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
+      "Warning: Constrained optimization (force through all peaks) using SLSQP failed. \n",
+      " Trying unconstrained....\n",
+      "  using L-BFGS-B: for patternP2a (m³/h) where initial params were: [np.int64(3), np.int64(19), np.int64(1), np.int64(69), np.int64(41), np.int64(105), 3.0, 3.0, 3.0, 3.0, 3.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
       "Max error at peaks: 6.6166\n",
       "Warning: Model does not pass exactly through all peaks!\n",
       "  Fitted P2a (m³/h) with 5 peaks\n",
@@ -109,7 +115,9 @@
       "\n",
       "Processing P2b (m³/h)...\n",
       "  Detected 6 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
+      "Warning: Constrained optimization (force through all peaks) using SLSQP failed. \n",
+      " Trying unconstrained....\n",
+      "  using L-BFGS-B: for patternP2b (m³/h) where initial params were: [np.int64(2), np.int64(7), 0.1, np.int64(32), np.int64(24), np.int64(30), np.int64(30), 3.0, 3.0, 3.0, 3.0, 3.0, 3.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
       "Max error at peaks: 0.3755\n",
       "Warning: Model does not pass exactly through all peaks!\n",
       "  Fitted P2b (m³/h) with 6 peaks\n",
@@ -119,7 +127,9 @@
       "\n",
       "Processing P3a (m³/h)...\n",
       "  Detected 9 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
+      "Warning: Constrained optimization (force through all peaks) using SLSQP failed. \n",
+      " Trying unconstrained....\n",
+      "  using L-BFGS-B: for patternP3a (m³/h) where initial params were: [np.float64(24.4), 0.1, np.float64(97.6), np.float64(97.6), np.float64(122.0), np.float64(73.19999999999999), np.float64(146.4), np.float64(146.4), np.float64(73.19999999999999), np.float64(122.0), 3.0, 3.0, 3.0, 3.0, 3.0, 3.0, 3.0, 3.0, 3.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
       "Max error at peaks: 6.3717\n",
       "Warning: Model does not pass exactly through all peaks!\n",
       "  Fitted P3a (m³/h) with 9 peaks\n",
@@ -129,67 +139,9 @@
       "\n",
       "Processing P3b (m³/h)...\n",
       "  Detected 9 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
-      "Max error at peaks: 13.5663\n",
-      "Warning: Model does not pass exactly through all peaks!\n",
-      "  Fitted P3b (m³/h) with 9 peaks\n",
-      "  Base consumption: 1.48\n",
-      "  Sigmas (width): 3.62, 1.49, 0.46, 2.13, 0.70, 3.47, 1.90, 4.57, 0.76\n",
-      "  Alphas (skew): -2.03, 4.71, 0.60, 0.81, -3.06, 2.61, 0.54, 4.66, -1.52\n",
-      "\n",
-      "Processing P1a (Gallons/h)...\n",
-      "  Detected 5 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
-      "Max error at peaks: 0.6760\n",
-      "Warning: Model does not pass exactly through all peaks!\n",
-      "  Fitted P1a (Gallons/h) with 5 peaks\n",
-      "  Base consumption: 8.48\n",
-      "  Sigmas (width): 0.73, 2.01, 2.18, 2.16, 0.78\n",
-      "  Alphas (skew): 0.35, 0.01, -0.28, -0.37, 0.64\n",
-      "\n",
-      "Processing P1b (Gallons/h)...\n",
-      "  Detected 3 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
-      "Max error at peaks: 0.6795\n",
-      "Warning: Model does not pass exactly through all peaks!\n",
-      "  Fitted P1b (Gallons/h) with 3 peaks\n",
-      "  Base consumption: 6.16\n",
-      "  Sigmas (width): 1.02, 2.33, 3.18\n",
-      "  Alphas (skew): -0.85, 0.39, -0.52\n",
-      "\n",
-      "Processing P2a (m³/h)...\n",
-      "  Detected 5 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
-      "Max error at peaks: 6.6166\n",
-      "Warning: Model does not pass exactly through all peaks!\n",
-      "  Fitted P2a (m³/h) with 5 peaks\n",
-      "  Base consumption: 0.00\n",
-      "  Sigmas (width): 2.27, 1.53, 1.15, 4.18, 2.37\n",
-      "  Alphas (skew): -1.45, -2.04, 0.62, -1.25, 0.24\n",
-      "\n",
-      "Processing P2b (m³/h)...\n",
-      "  Detected 6 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
-      "Max error at peaks: 0.3755\n",
-      "Warning: Model does not pass exactly through all peaks!\n",
-      "  Fitted P2b (m³/h) with 6 peaks\n",
-      "  Base consumption: 0.00\n",
-      "  Sigmas (width): 2.67, 2.02, 2.35, 2.96, 1.75, 3.71\n",
-      "  Alphas (skew): -0.62, -0.00, -0.62, -1.01, -0.20, 0.94\n",
-      "\n",
-      "Processing P3a (m³/h)...\n",
-      "  Detected 9 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
-      "Max error at peaks: 6.3717\n",
-      "Warning: Model does not pass exactly through all peaks!\n",
-      "  Fitted P3a (m³/h) with 9 peaks\n",
-      "  Base consumption: 24.68\n",
-      "  Sigmas (width): 1.97, 1.23, 0.75, 0.31, 1.74, 1.86, 1.01, 4.35, 1.46\n",
-      "  Alphas (skew): -0.32, -0.56, -3.16, 0.11, -1.33, -1.03, 0.19, -1.23, 0.20\n",
-      "\n",
-      "Processing P3b (m³/h)...\n",
-      "  Detected 9 significant peaks\n",
-      "Warning: Constrained optimization failed. Trying unconstrained...\n",
+      "Warning: Constrained optimization (force through all peaks) using SLSQP failed. \n",
+      " Trying unconstrained....\n",
+      "  using L-BFGS-B: for patternP3b (m³/h) where initial params were: [np.float64(12.2), np.float64(36.599999999999994), 0.1, np.float64(61.0), np.float64(61.0), np.float64(85.39999999999999), np.float64(85.39999999999999), np.float64(244.0), np.float64(61.0), np.float64(170.8), 3.0, 3.0, 3.0, 3.0, 3.0, 3.0, 3.0, 3.0, 3.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
       "Max error at peaks: 13.5663\n",
       "Warning: Model does not pass exactly through all peaks!\n",
       "  Fitted P3b (m³/h) with 9 peaks\n",
@@ -274,7 +226,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 10
+   "execution_count": 2
   }
  ],
  "metadata": {
